# MAF3

./: .gitignore  CMakeLists.txt  GenerateMAFConfig.cmake  License.txt  MAF3Doxyfile  MAF3DoxyfileWithTests  MAFConfig.cmake.in  MAFInstallConfig.cmake.in  MAFVersion.txt.in  README  SuperBuild.cmake  UseMAF.cmake.in  build.bat  build.sh  buildVSSolution.bat  build_doc.bat  build_doc.sh  maf.pro  mafCommon.pri  mafCommon.pri.in  mafConfigureBuild.py  mafImportQScxml.pri  mafImportQXMLRPC.pri  mafImportQtSoap.pri  mafImportUtility.pri  mafImportVTK.pri  mafImportVXL.pri  mafInstallFoundation.py  mafInstallFoundationLibraries.pri  mafInstallModule.pri  mafInstallModule.pri.in  mafInstallTest.pri  mafInstallTest.pri.in  mafWithTest.pro  qMAFExport.h.in
Apps/qaCheck/: CMakeLists.txt  main.cpp  target_libraries.cmake
Examples/SimpleApp/: CMakeLists.txt  SimpleApp.pro  googlechat.cpp  googlechat.h  mafAppImages.qrc  mafGUIRegistration.h  mafMainWindow.cpp  mafMainWindow.h  mafMainWindow.ui  mafMementoApplication.cpp  mafMementoApplication.h  mafOperationSimpleApp.cpp  mafOperationSimpleApp.h  mafOperationSimpleApp.ui  main.cpp  target_libraries.cmake
Examples/scxmlTest/: CMakeLists.txt  mafModel.cpp  mafModel.h  mafStateMachine.cpp  mafStateMachine.h  main.cpp  scxmlTest.pro  target_libraries.cmake
Plugins/org.maf.dah.exampleapp/: CMakeLists.txt  mafCTKExampleDicomAppLogic.cpp  mafCTKExampleDicomAppLogic_p.h  mafCTKExampleDicomAppPlugin.cpp  mafCTKExampleDicomAppPlugin_p.h  mafCTKExampleDicomAppWidget.ui  target_libraries.cmake
doc/: CMakeLists.txt  MAF3Doxyfile  MAF3Doxyfile.in  MAF3Doxyfile.in.orig  MAF3DoxyfileWithTests  MAF3DoxyfileWithTests.in  MAF3DoxyfileWithTests.in.orig  MAF3PythonDoxyfile.in  mafDoxygenFooter.html
examples/: CMakeLists.txt  mafApplicationConfig.h.in
examples/CTKSimpleApp/: target_libraries.cmake
examples/ChartSample/: CMakeLists.txt  mainwindow.cpp  windowflagseditor.h
examples/HyperModelMonitor/: CMakeLists.txt  googlechat.cpp  mafMainWindow.cpp  mafMainWindow.h  mafMainWindow.ui  mafOperationSimpleApp.cpp  mafOperationSimpleApp.h  main.cpp  target_libraries.cmake
examples/RemoteCommunicationXMLRPC/: CMakeLists.txt
examples/SimpleApp/: CMakeLists.txt  form.ui  mafApplicationSettingsPageConfigurations.h  mafMainWindow.cpp  mafMainWindow.h  mafOperationSimpleApp.cpp  mafOperationSimpleApp.h  mafViewScriptInterpreter.cpp  mafViewScriptInterpreter.h  mafViewScriptInterpreterPython.cpp  mafViewScriptInterpreterPython.h  main.cpp  target_libraries.cmake
examples/VTKButtons/: CMakeLists.txt  OrthoSlice.xml  mafOrthoSlice.cpp  mafOrthoSlice.h  mafOrthoSlice.ui  mafToolVTKButtons.cpp  mafToolVTKButtons.h  mafToolVTKButtonsGroup.cpp  mafToolVTKButtonsGroup.h  mafToolVTKButtonsInterface.cpp  mafToolVTKButtonsInterface.h  mafToolVTKOrthoPlane.cpp  mafToolVTKOrthoPlane.h  mafViewOrthoSlice.cpp  mafViewOrthoSlice.h  mafViewVTKButtons.cpp  mafViewVTKButtons.h  main.cpp  target_libraries.cmake  vtkButtons.qrc
examples/chartSample/: CMakeLists.txt  chartSample.qrc  main.cpp  mainwindow.cpp  mainwindow.h  stylesheeteditor.cpp  stylesheeteditor.h  stylesheeteditor.ui  target_libraries.cmake  windowflagseditor.cpp
examples/mafCTKHostedApplication/: CMakeLists.txt  main.cpp  target_libraries.cmake
examples/mafCTKSimpleApp/: CMakeLists.txt  main.cpp
examples/mafInterpreter/: CMakeLists.txt  main.cpp  target_libraries.cmake  tstMainWindow.cpp  tstMainWindow.h
examples/mafPythonQtExample/: CMakeLists.txt  main.cpp  target_libraries.cmake
examples/mapReduceExample/: CMakeLists.txt  main.cpp  target_libraries.cmake
examples/qaCheck/: CMakeLists.txt  mafQAChecker.cpp  mafQAChecker.h  main.cpp
examples/scxmlTest/: mafModel.cpp  scxmlTest.pro
mafApplicationLogic/: CMakeLists.txt  mafApplicationLogic.i  mafApplicationLogic.pro  mafApplicationLogic_global.h  mafLogic.cpp  mafLogic.h  mafLogicLight.cpp  mafLogicLight.h
mafApplicationLogic/mafApplicationLogicTest/: mafApplicationLogicTest.pro  mafLogicLightTest.cpp  mafLogicTest.cpp  main.cpp  target_libraries.cmake
mafCore/: CMakeLists.txt  mafClassFactory.h  mafCommand.cpp  mafCommand.h  mafContainer.h  mafContainer.txx  mafContainerInterface.cpp  mafContainerInterface.h  mafContainersFixes.hpp  mafContracts.h  mafCore.i  mafCore.pro  mafCoreDefinitions.h  mafCoreRegistration.cpp  mafCoreRegistration.h  mafCoreSingletons.cpp  mafCoreSingletons.h  mafCore_global.h  mafExternalDataCodec.cpp  mafExternalDataCodec.h  mafHierarchy.cpp  mafHierarchy.h  mafIdProvider.cpp  mafIdProvider.h  mafLogger.cpp  mafLogger.h  mafLoggerBuffer.cpp  mafLoggerBuffer.h  mafLoggerConsole.cpp  mafLoggerConsole.h  mafLoggerFile.cpp  mafLoggerFile.h  mafMemento.cpp  mafMemento.h  mafMementoObject.cpp  mafMementoObject.h  mafMessageHandler.cpp  mafMessageHandler.h  mafMonitor.cpp  mafMonitor.h  (+31 more)
mafCore/mafCoreTest/: CMakeLists.txt  mafClassFactoryTest.cpp  mafContainerInterfaceTest.cpp  mafContainerTest.cpp  mafCoreRegistrationTest.cpp  mafCoreSingletonsTest.cpp  mafCoreTest.pro  mafExternalDataCodecTest.cpp  mafIdProviderTest.cpp  mafLoggerBufferTest.cpp  mafLoggerConsoleTest.cpp  mafLoggerFileTest.cpp  mafLoggerTest.cpp  (+15 more)
mafEventBus/: CMakeLists.txt  mafEvent.cpp  mafEvent.h  mafEventBus.i  mafEventBus.pro  mafEventBusManager.cpp  mafEventBusManager.h  mafEventBus_global.h  mafEventDefinitions.h  mafEventDispatcher.cpp  mafEventDispatcher.h  mafEventDispatcherLocal.cpp  mafEventDispatcherLocal.h  mafEventDispatcherRemote.cpp  mafEventDispatcherRemote.h  mafNetworkConnector.cpp  mafNetworkConnector.h  mafNetworkConnectorQXMLRPC.cpp  mafNetworkConnectorQXMLRPC.h  mafNetworkConnectorQtSoap.cpp  mafNetworkConnectorQtSoap.h  mafTopicRegistry.cpp  mafTopicRegistry.h  target_libraries.cmake
mafTimeSpace/: CMakeLists.txt  mafModuleRegistrator.cpp  mafModuleRegistrator.h  mafThreadedTimer.cpp  mafThreadedTimer.h  mafTimeManager.cpp  mafTimeManager.h  mafTimeSpace.i  mafTimeSpace.pro  mafTimeSpaceDefinitions.h  mafTimeSpace_global.h  mafTimer.cpp  mafTimer.h
src/: CMakeLists.txt
test/: CMakeLists.txt  mafTestConfig.h.in
(+1568 files in other folders)
